@@ -60,6 +60,7 @@ my $format = '';
 my $varfile = '';
 my $wait = 0;
 my $waitFail = 0;
+my $abortOnFail = 0;
 my $autoSnapshot = 0;
 my $noDestroy = 0;
 my $help = 0;
@@ -86,6 +87,7 @@ GetOptions('createimg' => \$create,
            'quiet' => \$quiet,
            'wait' => \$wait,
            'wait-fail' => \$waitFail,
+           'abort-on-fail' => \$abortOnFail,
            'auto-snapshot' => \$autoSnapshot,
            'nodestroy' => \$noDestroy,
            'reuse' => \$reuse,
@@ -133,6 +135,9 @@ if ($wait) {
 }
 if ($waitFail) {
     $config->setWaitFail(1);
+}
+if ($abortOnFail) {
+    $config->setAbortOnFail(1);
 }
 if ($autoSnapshot) {
     $config->setAutoSnapshot(1);
@@ -493,6 +498,7 @@ anste [options] [file ...] [var1=value1 var2=value2 ...]
    -format <fmt>      select the output format for the reports
    -wait              wait before shutting down once the test is completed
    -wait-fail         wait if a test fails
+   -abort-on-fail     do not continue excuting suites when one of them fails
    -nodestroy         keep scenario running after tests have finished
    -step              run tests step by step, waiting after each one
    -break <t1,t2,...> set breakpoints before the given test names
